--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stormio</title>
     <link rel="stylesheet" href="/dist/output.css">
+    <script defer src="src/js/theme.js"></script>
     <script defer src="src/js/carousel.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,8 +44,8 @@
     <div id="main-container" class="lg:grid lg:grid-cols-2 flex flex-col gap-4 justify-center">
         <div id="main-info" class="sm:py-12 sm:justify-around flex flex-col items-center gap-12 shadow-glow rounded-md py-6 px-[4%]">
             <div id="main-info-wrapper" class="flex flex-col justify-center items-center text-center gap-4">
-                <div id="main-date" class="text-2xl transalate">Domingo, 18 de Janeiro</div>
-                <div id="main-state" class="text-xl font-medium transalate">Dia limpo sem nuvens.</div>
+                <div id="main-date" class="text-2xl translate">Thursday, January 22</div>
+                <div id="main-state" class="text-xl font-medium translate">Clear day, sky without clouds.</div>
                 <div id="visual" class="flex items-center gap-4">
                     <img id="main-weather-icon" src="public/day/clear-day.svg" alt="" class="h-28">
                     <p class="sm:text-7xl text-5xl flex temp"><temp>20</temp><meas class="sm:text-4xl text-2xl self-end">°C</meas></p>
@@ -56,35 +57,35 @@
             </div>
         </div>
         <div id="main-extra-info" class="py-8 px-[3%] shadow-glow rounded-md flex flex-col gap-6">
-            <div id="main-extra-title" class="flex justify-center text-xl transalate">Today's Conditions</div>
+            <div id="main-extra-title" class="flex justify-center text-xl translate">Today's Conditions</div>
             <div id="main-extra-wrapper" class="grid grid-cols-3 gap-4">
                 <div id="rain-chance" class="flex flex-col items-center gap-2">
-                    <p class="text-center transalate">Chance of Rain</p>
+                    <p class="text-center translate">Chance of Rain</p>
                     <img src="public/misc/rain.svg" alt="" class="h-10">
                     <p class="text-center">80%</p>
                 </div>
                 <div id="precip" class="flex flex-col items-center gap-2">
-                    <p class="text-center transalate">Precipitation</p>
+                    <p class="text-center translate">Precipitation</p>
                     <img src="public/misc/rain-measure.svg" alt="" class="h-10">
                     <p class="text-center">10 mm</p>
                 </div>
                 <div id="wind" class="flex flex-col items-center gap-2">
-                    <p class="text-center transalate">Wind</p>
+                    <p class="text-center translate">Wind</p>
                     <img src="public/misc/wind.svg" alt="" class="h-10">
                     <p class="text-center"><vel>12</vel> <meas>km/h</meas></p>
                 </div>
                 <div id="humidity" class="flex flex-col items-center gap-2">
-                    <p class="text-center transalate">Humidity</p>
+                    <p class="text-center translate">Humidity</p>
                     <img src="public/misc/humidity.svg" alt="" class="h-10">
                     <p class="text-center">80%</p>
                 </div>
                 <div id="pressure" class="flex flex-col items-center gap-2">
-                    <p class="text-center transalate">Pressure</p>
+                    <p class="text-center translate">Pressure</p>
                     <img src="public/misc/barometer.svg" alt="" class="h-10">
                     <p class="text-center">704 hPa</p>
                 </div>
                 <div id="uv-index" class="flex flex-col items-center gap-2">
-                    <p class="text-center transalate">UV Index</p>
+                    <p class="text-center translate">UV Index</p>
                     <img src="public/misc/uv-index-1.svg" alt="" class="h-10">
                     <p class="text-center">1</p>
                 </div>
@@ -107,7 +108,7 @@
         </div>
         <div id="alerts-container" class="flex justify-center items-center div col-span-2">
             <div id="alerts" class="w-full shadow-glow rounded-md flex flex-col justify-center items-center px-[4%] py-4">
-                <p class="sm:text-2xl text-xl flex items-center translate"><img src="public/ui/code-yellow.svg" class="sm:h-16 h-12 float-right" alt="">Alerta de chuva forte</p>
+                <div class="flex items-center"><img src="public/ui/code-yellow.svg" class="sm:h-16 h-12 float-left" alt=""><p class="sm:text-2xl flex text-xl translate">Alerta de chuva forte</p></div>
                 <p class="text-center translate">Chuva intensa com risco de alagamentos.</p>
             </div>
         </div>
@@ -283,7 +284,6 @@
         </div>
     </section>
 
-    <script type="module" src="src/js/theme.js"></script>
     <script type="module" src="src/js/main.js"></script>
 </body>
 </html>
