--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <img class="daily-img h-8" src="public/day/clear-day.svg" alt="">
                     <p class="daily-prec">10%</p>
                 </div>
-                <p class="flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
+                <p class="hidden sm:flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
             </div>
            <div class="daily-for-wrapper flex justify-between items-center relative py-2">
                 <p class="daily-day translate flex flex-1">Sunday</p>
@@ -163,7 +163,7 @@
                     <img class="daily-img h-8" src="public/day/clear-day.svg" alt="">
                     <p class="daily-prec">10%</p>
                 </div>
-                <p class="flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
+                <p class="hidden sm:flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
             </div>
             <div class="daily-for-wrapper flex justify-between items-center relative py-2">
                 <p class="daily-day translate flex flex-1">Sunday</p>
@@ -171,7 +171,7 @@
                     <img class="daily-img h-8" src="public/day/clear-day.svg" alt="">
                     <p class="daily-prec">10%</p>
                 </div>
-                <p class="flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
+                <p class="hidden sm:flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
             </div>
             <div class="daily-for-wrapper flex justify-between items-center relative py-2">
                 <p class="daily-day translate flex flex-1">Sunday</p>
@@ -179,7 +179,7 @@
                     <img class="daily-img h-8" src="public/day/clear-day.svg" alt="">
                     <p class="daily-prec">10%</p>
                 </div>
-                <p class="flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
+                <p class="hidden sm:flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
             </div>
             <div class="daily-for-wrapper flex justify-between items-center relative py-2">
                 <p class="daily-day translate flex flex-1">Sunday</p>
@@ -187,7 +187,7 @@
                     <img class="daily-img h-8" src="public/day/clear-day.svg" alt="">
                     <p class="daily-prec">10%</p>
                 </div>
-                <p class="flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
+                <p class="hidden sm:flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
             </div>
             <div class="daily-for-wrapper flex justify-between items-center relative py-2">
                 <p class="daily-day translate flex flex-1">Sunday</p>
@@ -195,7 +195,7 @@
                     <img class="daily-img h-8" src="public/day/clear-day.svg" alt="">
                     <p class="daily-prec">10%</p>
                 </div>
-                <p class="flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
+                <p class="hidden sm:flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
             </div>
         </div>
     </section>
