--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <img class="daily-img h-8" src="public/day/clear-day.svg" alt="">
                     <p class="daily-prec">10%</p>
                 </div>
-                <p class="flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
+                <p class="hidden sm:flex flex-1 text-nowrap justify-end"><temp class="daily-min-temp">20</temp><meas>°C</meas> / <temp class="daily-max-temp">25</temp> <meas>°C</meas></p>
             </div>
             <div class="daily-for-wrapper flex justify-between items-center relative py-2">
                 <p class="daily-day translate flex flex-1">Sunday</p>
